[tool.poetry]
name = "aufenthaltsangelegenheiten"
version = "0.1.0"
description = ""
authors = ["mspci"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.23.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
